# tracker

./: .env.tpl  .gitignore  Cargo.toml  Dockerfile  Makefile  README.adoc  docker-compose.yaml  go.mod  main.go
docs/: docs.go  swagger.json  swagger.yaml
migration/src/: lib.rs  m20230415_185925_user_table.rs
routes/: health.go  health_test.go  index.go
src/: error.rs  main.rs  model.rs  models.rs  posts.rs  state.rs
src/auth/: error.rs  mod.rs  request.rs  response.rs
src/entity/: mod.rs  posts.rs  prelude.rs  user.rs
src/metrics/: mod.rs
src/metrics_server/: mod.rs
src/models/user/: mutation.rs  query.rs
src/posts/: mod.rs
src/web/: auth.rs  mod.rs  routes_tickets.rs
templates/: layout.html.tera
templates/auth/: login.html.tera
tests/: quick_dev.rs
