[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
axum-macros = "0.3"
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

