[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tower-cookies = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
axum-macros = "0.3"
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
async-session = "3.0.0"
headers = "0.3"
http = "0.2"
oauth2 = "4.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
oxide-auth = "0.5"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

